--- a/bluebell_frontend/public/index.html
+++ b/bluebell_frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="referrer" content="no-referrer">
     <link rel="icon" href="<%= BASE_URL %>static/favicon.ico">
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <!-- <link href="../static/css/materialdesignicons.min.css" rel="stylesheet"> -->
+    <link href="../static/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="../static/css/style.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/eye.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
